--- a/view/admin/allproducts.ejs
+++ b/view/admin/allproducts.ejs
@@ -39,7 +39,7 @@
                         </tr>
                       </thead>
                     <tbody>
-                    <% products.forEach((product, index) => { %>
+                    <% products.forEach((product) => { %>
                         <tr>
                           <td><%= product.Name %></td>
                           <td><%= product.Price %></td>
